<package>
  <name>itkmi</name>
  <version>1.0.0</version>
  <description>itk based MI registration</description>
  <maintainer email="kpykcb@gmail.com">kp</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/itkmi</url>
  <url type="bugtracker">https://github.com/some_tracker</url>

  <author>kp</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>eigen_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>cmake_modules</run_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>cv_bridge</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
